# openml-croissant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  docker_build.sh  docker_run.sh
.github/: dependabot.yml
.github/workflows/: release_docker.yaml
docker/: Dockerfile  README.md
python/: README.md  pyproject.toml
python/openml_croissant/: __init__.py
python/openml_croissant/_src/: conversion.py  conversion_outside_mlcroissant.py  converter.py  hashing.py  logger.py  rest.py  serialization.py  settings.py  web_api.py
python/openml_croissant/_src/router/: jos.py
python/openml_croissant/_src/tests/: test_converter.py
python/openml_croissant/_src/tests/resources/croissant/: constructed.json  constructed_with_parquet.json
python/openml_croissant/_src/tests/resources/openml/: constructed.json  constructed_with_parquet.json  features_constructed.xml
python/openml_croissant/_src/tests/router/: jos_test.py
python/openml_croissant/scripts/: api.py  generate_croissants.py  rest.py  upload_datasets_to_minio.py  validate_openml_croissant.py  web_api.py
upload/: upload_datasets_to_minio.py
