[project]
name = "openml-croissant"
version = "1.1.20241220"
authors = [
  { name="Jos van der Velde" },
]
description = "The Python-based web API for OpenML Croissant."
readme = "README.md"
requires-python = ">3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.115.7",
    "minio==7.2.12",
    "mlcroissant==1.0.12",
    "langcodes==3.5.0",
    "language_data==1.2.0",
    "openml==0.15.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/openml/openml-croissant"
"Bug Tracker" = "https://github.com/openml/openml-croissant/issues"

[tool.bandit.assert_used]
skips = ["**/tests/*.py"]

[tool.black]
line-length = 100

[tool.ruff]
select = ["A", "ARG", "B", "COM", "C4", "E", "EM", "F", "I001", "PT", "PTH", "T20", "RET", "SIM"]
line-length = 100

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]


[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = [
    "python/openml_croissant/_src/tests"
]
